--- a/.env
+++ b/.env
@@ -3,11 +3,11 @@ host_dev=localhost
 port_dev=3306
 user_dev=root
 password_dev=root
-database_dev=bankmanagement
+database_dev=uom
 
-# Production environment
-host=
-port=3306
-user=
-password=
-database=
+# # Production environment
+# host=
+# port=3306
+# user=
+# password=
+# database=
