--- a/.env
+++ b/.env
@@ -6,8 +6,11 @@ password_dev=root
 database_dev=uom
 
 # # Production environment
-# host=
-# port=3306
-# user=
-# password=
-# database=
+# host=mysql-13eae395-hasiofficial2002-f9b9.c.aivencloud.com
+# port=18475
+# user=avnadmin
+# password=AVNS_TVFlXjqaBIrs_ewIgdP
+# database=defaultdb
+
+
+
