SQL Free Pacakge

--- a/.env
+++ b/.env
@@ -1,16 +1,23 @@
 # Development environment
-host_dev=localhost
-port_dev=3306
-user_dev=root
-password_dev=root
-database_dev=uom
+# host_dev=localhost
+# port_dev=3306
+# user_dev=root
+# password_dev=root
+# database_dev=uom
+# host_dev=localhost
+# port_dev=3306
+# user_dev=root
+# password_dev=root
+# database_dev=uom
+
+
+
 
 # # Production environment
-# host=mysql-13eae395-hasiofficial2002-f9b9.c.aivencloud.com
-# port=18475
-# user=avnadmin
-# password=AVNS_TVFlXjqaBIrs_ewIgdP
-# database=defaultdb
+# .env.local
 
-
-
+DB_HOST=mysql-13eae395-hasiofficial2002-f9b9.c.aivencloud.com
+DB_PORT=18475
+DB_USER=avnadmin
+DB_PASSWORD=AVNS_TVFlXjqaBIrs_ewIgdP
+DB_DATABASE=defaultdb
