--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/components/user/Registation.tsx", "src/app/api/user/add/route.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/components/user/Registation.tsx", "src/app/api/user/add/route.js", "src/app/api/orderdetails/route.ts"],
   "exclude": ["node_modules"]
 }
